[package]
name = "yksom"
version = "0.1.0"
authors = ["Laurence Tratt <laurie@tratt.net>"]
edition = "2018"

[[bin]]
doc = false
name = "yksom"

[lib]
name = "yksom"
path = "src/lib/mod.rs"

[[test]]
name = "lang_tests"
path = "lang_tests/run.rs"
harness = false

[build-dependencies]
cfgrammar = "0.5"
lrlex = "0.5"
lrpar = "0.5"
rerun_except = "0.1"

[dev-dependencies]
lang_tester = "0.3"
lazy_static = "1.3"
regex = "1.1"

[dependencies]
abgc = { git="https://github.com/softdevteam/abgc" }
abgc_derive = { git="https://github.com/softdevteam/abgc" }
arrayvec = "0.5"
cfgrammar = "0.5"
getopts = "0.2"
itertools = "0.8"
lrlex = "0.5"
lrpar = "0.5"
natrob = { git="https://github.com/softdevteam/natrob", features=["abgc"] }
num-bigint = "0.2"
num-integer = "0.1"
num_enum = "0.3"
num-traits = "0.2"
ryu = "1.0"

# The main reason for customising the profile.* sections is to force unwind=abort.
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
panic = 'abort'
incremental = true
overflow-checks = true

[profile.test]
opt-level = 0
debug = 2
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
# Currently, the panic setting is ignored for the 'test' profile.
incremental = true
overflow-checks = true
