[package]
name = "yksom"
version = "0.1.0"
authors = ["Laurence Tratt <laurie@tratt.net>"]
edition = "2018"
license = "Apache-2.0 OR MIT"

[[bin]]
doc = false
name = "yksom"

[lib]
name = "yksom"
path = "src/lib/mod.rs"

[[test]]
name = "lang_tests"
path = "lang_tests/run.rs"
harness = false

[features]
rustgc = ["libgc/rustgc"]
krun_harness = ["libc"]

[build-dependencies]
cfgrammar = "0.9"
lrlex = "0.9"
lrpar = "0.9"
rerun_except = "0.1"

[dev-dependencies]
serial_test = "0.4.0"
lang_tester = "0.3"
lazy_static = "1.3"
regex = "1.1"

[dependencies]
arrayvec = "0.5"
cfgrammar = "0.9"
getopts = "0.2"
itertools = "0.9"
libgc = { git = "https://github.com/softdevteam/libgc" }
lrlex = "0.9"
lrpar = "0.9"
natrob = { git="https://github.com/softdevteam/natrob", features=["libgc"] }
num-bigint = "0.3"
num-integer = "0.1"
num_enum = "0.5"
num-traits = "0.2"
ryu = "1.0"
smartstring = "0.2"
static_assertions = "1.1"
termion = "1.5"
libc = { version = "0.2", optional = true }

# The main reason for customising the profile.* sections is to force unwind=abort.
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
panic = 'abort'
incremental = true
overflow-checks = true

[profile.test]
opt-level = 0
debug = 2
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
# Currently, the panic setting is ignored for the 'test' profile.
incremental = true
overflow-checks = true
